@@ -1,42 +1,0 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<Patch>
-
-	
-	<!--========================= adding mechs =============================-->
-	
-	<Operation Class="PatchOperationSequence">
-		<success>Always</success>
-		<operations>
-			<li Class="sd_luciprod.PatchOperationFindMod">
-				<modName>Mechanoids Extraordinaire</modName>
-			</li>
-			<li Class="PatchOperationAdd">
-		<xpath>*/RecipeDef[defName = "sd_luciprod_extract_mechanites_scyther"]/recipeUsers</xpath>
-		<value>
-		  <li>Mechanoid_Crawler</li>
-		  <li>Mechanoid_Skullywag</li>
-		  <li>Mechanoid_Assaulter</li>
-		  <li>Mechanoid_Flamebot</li>
-		</value>
-	</li>
-			
-			</operations>
-	</Operation>
-	
-	<Operation Class="PatchOperationSequence">
-		<success>Always</success>
-		<operations>
-			<li Class="sd_luciprod.PatchOperationFindMod">
-				<modName>Mechanoids Extraordinaire</modName>
-			</li>
-			<li Class="PatchOperationAdd">
-		<xpath>*/RecipeDef[defName = "sd_luciprod_extract_mechanites_centipede"]/recipeUsers</xpath>
-		<value>  
-		  <li>Mechanoid_Mammoth</li>
-		</value>
-	</li>
-			
-			</operations>
-	</Operation>
-
-</Patch>
